; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/opencrypto/extr_blake2_test.c_get_handle_fd.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/opencrypto/extr_blake2_test.c_get_handle_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"/dev/crypto\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@CRIOGET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_handle_fd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_handle_fd() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @O_RDWR, align 4
  %4 = call i32 @open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = icmp sge i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ATF_REQUIRE(i32 %7)
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @CRIOGET, align 4
  %11 = call i32 @ioctl(i32 %9, i32 %10, i32* %2)
  %12 = icmp ne i32 %11, -1
  %13 = zext i1 %12 to i32
  %14 = call i32 @ATF_REQUIRE(i32 %13)
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @close(i32 %15)
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @ATF_REQUIRE(i32) #1

declare dso_local i32 @ioctl(i32, i32, i32*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
